--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
           <li><a href="pricing.html">Pricing</a></li>
           
           <li><a href="contact.html" class="active">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+        
         </ul>
       </nav><!-- .navbar -->
 
@@ -212,7 +212,7 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong>Pyne Engeneering<span></span></strong>. All Rights Reserved
+        &copy; Copyright <strong>Payne Engeneering<span></span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">jack Oraro</a>
