--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
       </nav><!-- .navbar -->
 
@@ -60,7 +60,7 @@
       <div class="row gy-4 d-flex justify-content-between">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h2 data-aos="fade-up"> Integration company in telecomunication ,IT and green energy</h2>
-          <p data-aos="fade-up" data-aos-delay="100">offer services related to designing, implementing, and managing integrated solutions that encompass these areas, aiming to provide more comprehensive and efficient offerings to their clients or customers.</p>
+          <p data-aos="fade-up" data-aos-delay="100">Offer services related to designing, implementing, and managing integrated solutions that encompass these areas, aiming to provide more comprehensive and efficient offerings to their clients or customers.</p>
 
           <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
             <input type="text" class="form-control" placeholder="ZIP code or CitY">
@@ -165,7 +165,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> We are called to help in providing better Tellevommunication as well as Information Technology Service , we are proud of the increasing number of customers</p>
             <a class="cta-btn" href="#">Call To Action</a>
           </div>
         </div>
