--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,7 @@
           <li><a href="pricing.html" class="active">Pricing</a></li>
           
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
       </nav><!-- .navbar -->
 
