--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
       </nav><!-- .navbar -->
 
@@ -457,7 +457,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span>PAYNE ENGINEERING</span>
           </a>
-          <p>this type of company aims to provide holistic and innovative solutions that cater to the technological, communication, and sustainability needs of businesses and industries</p>
+          <p>This type of company aims to provide holistic and innovative solutions that cater to the technological, communication, and sustainability needs of businesses and industries</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
