adding new updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="Partners.html">Partners</a></li>
+          <li><a href="Clientella.html">Clientella</a></li>
+          <li><a href="Enquiries.html">Enquiries</a></li>
           <li><a href="contact.html">Contact</a></li>
           <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
@@ -203,7 +205,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/team/team-3.jpg" class="testimonial-img" alt="">
                 <h3>Jack Oraro</h3>
                 <h4>Designer</h4>
                 <div class="stars">
@@ -220,7 +222,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Wickliffe Mboya</h3>
+                <h3>Lavender Agillah</h3>
                 <h4>Store Owner</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -228,7 +230,7 @@
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   
-
+                  Am so much happy to stand in  for this position and to offer you quality training 
 
 
                   <i class="bi bi-quote quote-icon-right"></i>
@@ -247,7 +249,7 @@
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   
-
+                  Am a young Dev who 
 
 
                   <i class="bi bi-quote quote-icon-right"></i>
