--- a/services.html
+++ b/services.html
@@ -48,11 +48,12 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html" class="active">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-         
+          <li><a href="services.html">Services</a></li>
+          <li><a href="Partners.html">Partners</a></li>
+          <li><a href="Clientella.html">Clientella</a></li>
+          <li><a href="Enquiries.html">Enquiries</a></li>
           <li><a href="contact.html">Contact</a></li>
           <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
@@ -130,8 +131,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <span>Our Services</span>
-          <h2>Our Services</h2>
+          <span>More  Services</span>
+          <h2>More Services</h2>
 
         </div>
 
