--- a/Enquiries.html
+++ b/Enquiries.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Advanced Projects Pricing</title>
+  <title>Logis Bootstrap Template - Get a Quote</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/logo.png" rel="favicon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>PAYNE ENGINEERING</h1>
+        <h1>Logis</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -53,7 +53,6 @@
           <li><a href="Clientella.html">Clientella</a></li>
           <li><a href="Enquiries.html">Enquiries</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
       </nav><!-- .navbar -->
 
@@ -69,8 +68,8 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Pricing</h2>
-              <p>This Help our company To Grow financially Becouse of this we will be in a position to outreach more part of the world to enhace better performance of our community.</p>
+              <h2>Enquiries</h2>
+              <p>Just Proceed with Enquiries for any assistance be it installation of gdagets , Educational purposes or any form of guidance in technology field</p>
             </div>
           </div>
         </div>
@@ -79,68 +78,78 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Pricing</li>
+            <li>Enquire</li>
           </ol>
         </div>
       </nav>
     </div><!-- End Breadcrumbs -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <!-- ======= Get a Quote Section ======= -->
+    <section id="get-a-quote" class="get-a-quote">
       <div class="container" data-aos="fade-up">
 
-        <div class="row gy-4">
+        <div class="row g-0">
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="pricing-item">
-              <h3>Free Plan</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> Free service</li>
-                <li><i class="bi bi-check"></i> Education</li>
-                <li><i class="bi bi-check"></i> Research and Innovation camps</li>
-                <li class="na"><i class="bi bi-x"></i> <span>Bootcamping for our products</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Free courses for our students</span></li>
-              </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
-            </div>
-          </div><!-- End Pricing Item -->
+          <div class="col-lg-5 quote-bg" style="background-image: url(assets/img/quote-bg.jpg);"></div>
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="pricing-item featured">
-              <h3>Business Plan</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> Free service</li>
-                <li><i class="bi bi-check"></i> Education</li>
-                <li><i class="bi bi-check"></i> Research and Innovation camps</li>
-                <li><i class="bi bi-check"></i> Bootcamping for our products</li>
-                <li><i class="bi bi-check"></i> Free courses for our students</li>
-              </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
-            </div>
-          </div><!-- End Pricing Item -->
+          <div class="col-lg-7">
+            <form action="forms/quote.php" method="post" class="php-email-form">
+              <h3>Enquire</h3>
+              <p>The more specific you are, the better I will be able to understand your enquiry and provide you with an accurate and helpful response.</p>
+              <div class="row gy-4">
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="pricing-item">
-              <h3>Developer Plan</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> Free service</li>
-                <li><i class="bi bi-check"></i> Education</li>
-                <li><i class="bi bi-check"></i>  Research and Innovation camps</li>
-                <li><i class="bi bi-check"></i> Bootcamping for our products</li>
-                <li><i class="bi bi-check"></i> Free courses for our students</li>
-              </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
-            </div>
-          </div><!-- End Pricing Item -->
+                <div class="col-md-6">
+                  <input type="text" name="departure" class="form-control" placeholder="Field" required>
+                </div>
+
+                <div class="col-md-6">
+                  <input type="text" name="delivery" class="form-control" placeholder="Type of assistance" required>
+                </div>
+
+                <div class="col-md-6">
+                  <input type="text" name="weight" class="form-control" placeholder="City of residence" required>
+                </div>
+
+                <div class="col-md-6">
+                  <input type="text" name="dimensions" class="form-control" placeholder="What is your level of study" required>
+                </div>
+
+                <div class="col-lg-12">
+                  <h4>Your Personal Details</h4>
+                </div>
+
+                <div class="col-md-12">
+                  <input type="text" name="name" class="form-control" placeholder="Name" required>
+                </div>
+
+                <div class="col-md-12 ">
+                  <input type="email" class="form-control" name="email" placeholder="Email" required>
+                </div>
+
+                <div class="col-md-12">
+                  <input type="text" class="form-control" name="phone" placeholder="Phone" required>
+                </div>
+
+                <div class="col-md-12">
+                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
+
+                  <button type="submit">Get a quote</button>
+                </div>
+
+              </div>
+            </form>
+          </div><!-- End Quote Form -->
 
         </div>
 
       </div>
-    </section><!-- End Pricing Section -->
-
+    </section><!-- End Get a Quote Section -->
 
   </main><!-- End #main -->
 
