--- a/Partners.html
+++ b/Partners.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PAYNE ENGENEERING- About</title>
+  <title>PAYNE ENGENEERING-Partner</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -70,9 +70,10 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>About Us</h2>
+              <h2>Partners</h2>
               <p>
-
+              This are the people who showed up fully potential collaborative work in comming up with this amazing 
+              Payneeengineering company.
 
               </p>
             </div>
@@ -83,93 +84,13 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Partners</li>
           </ol>
         </div>
       </nav>
     </div><!-- End Breadcrumbs -->
 
-    <!-- ======= About Us Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row gy-4">
-          <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://www.intersputnik.world/" class="glightbox play-btn"></a>
-          </div>
-          <div class="col-lg-6 content order-last  order-lg-first">
-            <h3>About Us</h3>
-            <p>
-              The remarkable history of pyneengeneering started in 2016. It all began with our sister company MoldCable which was focused on cable installation and repair services. The leadership realized that technology is constantly evolving, and there is a need for an infrastructure company that will make a difference; that's how Utilities One was born.
-            </p>
-            <ul>
-              <li data-aos="fade-up" data-aos-delay="100">
-                <i class="bi bi-diagram-3"></i>
-                <div>
-                  <h5>Payne Engeneering is being built and maintained by the finest industry experts</h5>
-                  <p>Our team of experienced professionals works hard to deliver excellent solutions and services to our ever-growing customer community. Every employee contributes exceptional ideas to our progressive initiatives and works cooperatively with our leadership to realize the company's full potential.</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-fullscreen-exit"></i>
-                <div>
-                  <h5>Proud Members of Esteemed Industry Associations</h5>
-                  <p>Pyne Engeneering has an outstanding reputation with over a decade of experience, delivering better results and facilitating optimum value. We realize that our employees are our greatest asset, which is why our carrier issued their compensation insurance directly. It provides peace of mind for our staff and allows them to avoid the inconvenience of insurance via the assigned risk pool.</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-broadcast"></i>
-                <div>
-                  <h5>Our Partners</h5>
-                  <p>Our partners are committed to using our solutions to help our shared customers acquire better customer experiences and grow engagement with their consumers. Every one of our partners has been strategically selected for their unique expertise across a wide range of industries and the complementary software solutions, services, and equipment they provide.</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Us Section -->
-
-    <!-- ======= Stats Counter Section ======= -->
-    <section id="stats-counter" class="stats-counter pt-0">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Clients</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Workers</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-    </section><!-- End Stats Counter Section -->
+   
 
     <!-- ======= Our Team Section ======= -->
     <section id="team" class="team pt-0">
@@ -244,6 +165,71 @@
 
       </div>
     </section><!-- End Our Team Section -->
+    
+  
+          <div class="row" data-aos="fade-up" data-aos-delay="100">
+  
+            <div class="col-lg-4 col-md-6 d-flex">
+              <div class="member">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <div class="member-content">
+                  <h4>Walter White</h4>
+                  <span>OSP Senior Production Engineer</span>
+                  <p>
+                    Is an engineer with over a decade of experience in telecommunications. He worked his way up from the bottom, starting as a Desktop Surveyor. Over the years, he has served in Walkout QC, OSP Design Engineering, Permit Drafting, Project Coordination, and most recently as the Senior OSP/ISP Fiber Splicing QC Specialist for TWC/Charter/Spectrum as well as OSP Engineer - QC Specialist for AT&T, Verizon, & Frontier
+                  </p>
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+  
+            <div class="col-lg-4 col-md-6 d-flex">
+              <div class="member">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <div class="member-content">
+                  <h4>Sarah Jhinson</h4>
+                  <span>OSP Engineer</span>
+                  <p>
+                    is a creative professional engineer with a bachelor of Architectural engineering and a Master of science in management. He has over ten years of experience in design and five years in the telecommunication industry. He is a quick learner who can manage multiple projects at crucial times and solve problems efficiently.
+                  </p>
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+  
+            <div class="col-lg-4 col-md-6 d-flex">
+              <div class="member">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <div class="member-content">
+                  <h4>William Anthony</h4>
+                  <span>OSP ENGINEER</span>
+                  <p>
+                    Anthony has over 10 years of experience in the telecommunication industry. During that time, he worked as a Drafter, Permit Tech, OSP Engineer, and Network Planner. Extensive experience designing and engineering OSP telecommunications networks in aerial buried and underground designs. Ability to complete site survey for new infrastructures, which includes all structures such as poles, conduit systems, cable, and associated equipment. Comprehensive knowledge of AutoCAD and permitting regulations regarding Right of Way (ROW), Property Rights, and Easements
+                  </p>
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+  
+          </div>
+  
+        </div>
+      </section><!-- End Our Team Section -->
 
     <!-- ======= Testimonials Section ======= -->
 
