--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,13 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="Partners.html">Partners</a></li>
+          <li><a href="Clientella.html">Clientella</a></li>
+          <li><a href="Enquiries.html">Enquiries</a></li>
+          <li><a href="contact.html">Contact</a></li>
         
         </ul>
       </nav><!-- .navbar -->
