--- a/Enquiries.html
+++ b/Enquiries.html
@@ -139,7 +139,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
 
-                  <button type="submit">Get a quote</button>
+                  <button type="submit">Proceed</button>
                 </div>
 
               </div>
