--- a/services.html
+++ b/services.html
@@ -312,7 +312,7 @@
             <li><a href="#">Telecommunications Services</a></li>
             <li><a href="#">Green Energy Services</a></li>
             <li><a href="#">Overall Integration Solutions</a></li>
-            <li><a href="#">Information Technology (IT) Services/a></li>
+            <li><a href="#">Information Technology (IT) Services</a></li>
             <li><a href="#">Graphic Design</a></li>
           </ul>
         </div>
@@ -324,7 +324,7 @@
             HomaBay, HM 535022<br>
             United States <br><br>
             <strong>Phone:</strong> +254 713584267<br>
-            <strong>Email:</strong> jack@gmail.com<br>
+            <strong>Email:</strong> info@payneengineering.co.ke<br>
           </p>
 
         </div>
