--- a/Partners.html
+++ b/Partners.html
@@ -160,6 +160,60 @@
               </div>
             </div>
           </div><!-- End Team Member -->
+          <div class="col-lg-4 col-md-6 d-flex">
+            <div class="member">
+              <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+              <div class="member-content">
+                <h4>William Anthony</h4>
+                <span>OSP ENGINEER</span>
+                <p>
+                  Anthony has over 10 years of experience in the telecommunication industry. During that time, he worked as a Drafter, Permit Tech, OSP Engineer, and Network Planner. Extensive experience designing and engineering OSP telecommunications networks in aerial buried and underground designs. Ability to complete site survey for new infrastructures, which includes all structures such as poles, conduit systems, cable, and associated equipment. Comprehensive knowledge of AutoCAD and permitting regulations regarding Right of Way (ROW), Property Rights, and Easements
+                </p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 d-flex">
+            <div class="member">
+              <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+              <div class="member-content">
+                <h4>William Anthony</h4>
+                <span>OSP ENGINEER</span>
+                <p>
+                  Anthony has over 10 years of experience in the telecommunication industry. During that time, he worked as a Drafter, Permit Tech, OSP Engineer, and Network Planner. Extensive experience designing and engineering OSP telecommunications networks in aerial buried and underground designs. Ability to complete site survey for new infrastructures, which includes all structures such as poles, conduit systems, cable, and associated equipment. Comprehensive knowledge of AutoCAD and permitting regulations regarding Right of Way (ROW), Property Rights, and Easements
+                </p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 d-flex">
+            <div class="member">
+              <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+              <div class="member-content">
+                <h4>William Anthony</h4>
+                <span>OSP ENGINEER</span>
+                <p>
+                  Anthony has over 10 years of experience in the telecommunication industry. During that time, he worked as a Drafter, Permit Tech, OSP Engineer, and Network Planner. Extensive experience designing and engineering OSP telecommunications networks in aerial buried and underground designs. Ability to complete site survey for new infrastructures, which includes all structures such as poles, conduit systems, cable, and associated equipment. Comprehensive knowledge of AutoCAD and permitting regulations regarding Right of Way (ROW), Property Rights, and Easements
+                </p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
 
@@ -167,69 +221,7 @@
     </section><!-- End Our Team Section -->
     
   
-          <div class="row" data-aos="fade-up" data-aos-delay="100">
-  
-            <div class="col-lg-4 col-md-6 d-flex">
-              <div class="member">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="member-content">
-                  <h4>Walter White</h4>
-                  <span>OSP Senior Production Engineer</span>
-                  <p>
-                    Is an engineer with over a decade of experience in telecommunications. He worked his way up from the bottom, starting as a Desktop Surveyor. Over the years, he has served in Walkout QC, OSP Design Engineering, Permit Drafting, Project Coordination, and most recently as the Senior OSP/ISP Fiber Splicing QC Specialist for TWC/Charter/Spectrum as well as OSP Engineer - QC Specialist for AT&T, Verizon, & Frontier
-                  </p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Team Member -->
-  
-            <div class="col-lg-4 col-md-6 d-flex">
-              <div class="member">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="member-content">
-                  <h4>Sarah Jhinson</h4>
-                  <span>OSP Engineer</span>
-                  <p>
-                    is a creative professional engineer with a bachelor of Architectural engineering and a Master of science in management. He has over ten years of experience in design and five years in the telecommunication industry. He is a quick learner who can manage multiple projects at crucial times and solve problems efficiently.
-                  </p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Team Member -->
-  
-            <div class="col-lg-4 col-md-6 d-flex">
-              <div class="member">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="member-content">
-                  <h4>William Anthony</h4>
-                  <span>OSP ENGINEER</span>
-                  <p>
-                    Anthony has over 10 years of experience in the telecommunication industry. During that time, he worked as a Drafter, Permit Tech, OSP Engineer, and Network Planner. Extensive experience designing and engineering OSP telecommunications networks in aerial buried and underground designs. Ability to complete site survey for new infrastructures, which includes all structures such as poles, conduit systems, cable, and associated equipment. Comprehensive knowledge of AutoCAD and permitting regulations regarding Right of Way (ROW), Property Rights, and Easements
-                  </p>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Team Member -->
-  
-          </div>
-  
-        </div>
-      </section><!-- End Our Team Section -->
+          
 
     <!-- ======= Testimonials Section ======= -->
 
@@ -268,7 +260,7 @@
             <li><a href="#">Telecommunications Services</a></li>
             <li><a href="#">Green Energy Services</a></li>
             <li><a href="#">Overall Integration Solutions</a></li>
-            <li><a href="#">Information Technology (IT) Services/a></li>
+            <li><a href="#">Information Technology (IT) Services</a></li>
             <li><a href="#">Graphic Design</a></li>
           </ul>
         </div>
@@ -280,7 +272,7 @@
             HomaBay, HM 535022<br>
             United States <br><br>
             <strong>Phone:</strong> +254 713584267<br>
-            <strong>Email:</strong> jack@gmail.com<br>
+            <strong>Email:</strong> info@payneengineering.co.ke<br>
           </p>
 
         </div>
