--- a/Enquiries.html
+++ b/Enquiries.html
@@ -39,7 +39,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logis</h1>
+        <h1>PAYE ENGINEERING</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -50,7 +50,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="Partners.html">Partners</a></li>
-          <li><a href="Clientella.html">Clientella</a></li>
+          <li><a href="Clientella.html">Clientelle</a></li>
           <li><a href="Enquiries.html">Enquiries</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -196,10 +196,10 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            H108 HomaBay Street <br>
-            HomaBay, HM 535022<br>
-            United States <br><br>
-            <strong>Phone:</strong> +254 713584267<br>
+            H108 OGANDE VILLAGE <br>
+            HOMABAY, HM 535022<br>
+            KENYA <br><br>
+            <strong>Phone:</strong> +254 769415479<br>
             <strong>Email:</strong> info@payneengineering.co.ke<br>
           </p>
 
@@ -210,10 +210,10 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong>Pyne Engeneering<span></span></strong>. All Rights Reserved
+        &copy; Copyright <strong>Payne Engeneering<span></span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">jack Oraro</a>
+        Designed by <a >payneengineers</a>
       </div>
     </div>
 
