--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="Partners.html">Partners</a></li>
-          <li><a href="Clientella.html">Clientella</a></li>
+          <li><a href="Clientella.html">Clientelle</a></li>
           <li><a href="Enquiries.html">Enquiries</a></li>
           <li><a href="contact.html">Contact</a></li>
           <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
@@ -423,10 +423,10 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            H108 HomaBay Street <br>
-            HomaBay, HM 535022<br>
-            United States <br><br>
-            <strong>Phone:</strong> +254 713584267<br>
+            H108 OGANDE VILLAGE <br>
+            HOMABAY, HM 535022<br>
+            KENYA <br><br>
+            <strong>Phone:</strong> +254 769415479<br>
             <strong>Email:</strong> info@payneengineering.co.ke<br>
           </p>
 
@@ -437,10 +437,10 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong>Pyne Engeneering<span></span></strong>. All Rights Reserved
+        &copy; Copyright <strong>Payne Engeneering<span></span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">jack Oraro</a>
+        Designed by <a >payneengineers</a>
       </div>
     </div>
 
