--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <li><a href="Clientella.html">Clientelle</a></li>
           <li><a href="Enquiries.html">Enquiries</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="Mail.html">Mail Login</a></li>
           <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
       </nav><!-- .navbar -->
